--- a/css/main.css
+++ b/css/main.css
@@ -126,3 +126,23 @@ button.join:hover {
     color: #f8b9ab;
 }
 /*intro end*/
+
+/*info start*/
+.info {}
+.info-bg {
+	background-image: url(../img/info-bg.jpg);
+    background-position: center top;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    padding: 70px 0 120px 0;
+    position: relative;
+    top: 600px;
+}
+.info-box {
+	margin: 40px 0;
+}
+.info h4 {
+	margin-bottom: 20px;
+}
+.info p {}
+/*info end*/
