--- a/css/main.css
+++ b/css/main.css
@@ -146,3 +146,37 @@ button.join:hover {
 }
 .info p {}
 /*info end*/
+
+*subscription start*/
+.subscription {}
+
+/*subscription end*/
+
+/*membership start*/
+.membership {
+	background-color: #e8e7e7;
+	padding: 30px 20px;
+	margin-top: 50px;
+}
+.title {
+	margin-bottom: 30px;
+}
+.title h4 {
+	text-transform: uppercase;
+	font-size: 21px;
+    color: #242425;
+}
+.content {}
+.content h4 {
+	text-transform: uppercase;
+    color: #004d7b;
+    font-size: 21px;
+    letter-spacing: 2px;
+}
+.content p {
+	color: #242425;
+    font-size: 15px;
+    line-height: 1.4;
+    letter-spacing: 1px;
+}
+/*membership end*/
