--- a/css/main.css
+++ b/css/main.css
@@ -180,3 +180,81 @@ button.join:hover {
     letter-spacing: 1px;
 }
 /*membership end*/
+
+/*access start*/
+.access {
+	background-image: url(../img/access-bg.jpg);
+	background-size: 120%;
+    background-position: 20%;
+    height: 630px;
+    margin-top: 50px;
+    padding: 50px;
+}
+.access-card {
+	border: 2px solid #c4c4c4;
+    background-color: #ffffff;
+    max-width: 400px;
+    text-align: center;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 30px;
+
+}
+.access-card h3 {
+	letter-spacing: 1px;
+}
+.access-card p {
+	color: #aaaaaa;
+	letter-spacing: 1px;
+}
+.access-card .form {
+	margin: 10px;
+}
+.access-card label {
+	display: block;
+	text-align: left;
+	color: #aaaaaa;
+}
+.access-card input {
+	display: block;
+	width: 100%;
+	background-color: #f4f4f4;
+    border: 1px solid #aaaaaa;
+    border-radius: 0;
+    font-family: "Averta-Regular", sans-serif;
+    font-size: 15px;
+    font-weight: 300;
+    height: 30px;
+    margin: 0 0 15px 0;
+    padding: 0 8px;
+}
+.access-card .buttons {
+	margin: 20px auto;
+}
+.access-card .buttons button {
+	display: block;
+	width: 100%;
+	margin-bottom: 10px;
+	padding: 10px 20px;
+}
+.access-card .buttons span {
+	margin-bottom: 10px;
+	display: block;
+}
+.access-card .buttons .face {
+	background-color: #3b5998;
+	color: #fff;
+	border: 2px solid #3b5998;
+	border-radius: 0;
+}
+.face i {
+	float: left;
+	font-size: 18px;
+}
+.access-card a {
+	display: block;
+    font-size: 17px;
+    margin-top: 8px;
+    color: #aaaaaa;
+}
+/*access end*/
